# DiatonyDawApplication

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING_SUMMARY.md  check_au_version.sh  fix_gecode_rpaths.sh  output010325_1657_2.txt  package.sh
Issues/: output010325_1657.txt
Note/: S11_17042025.md  S7_18032025.md
TestDiatonyDawApp Project/: 100325.als  TestDiatonyDawApp.als  testscaler3.als
TestDiatonyDawApp Project/111125 Project/: 111125.als
TestDiatonyDawApp Project/111125 Project/Backup/: 111125 [2025-11-12 021657].als
TestDiatonyDawApp Project/111125 Project/TEST Project/: TEST.als
TestDiatonyDawApp Project/111125 Project/TEST Project/Backup/: TEST [2025-12-18 155714].als
TestDiatonyDawApp Project/Backup/: TestDiatonyDawApp [2025-02-15 195001].als  testscaler3 [2025-05-15 011919].als
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleSound.h  SimpleVoice.h
src/audio/: SimpleSound.h  SimpleVoice.h
src/controller/: AppController.cpp  AppController.h  ContextIdentifiers.h
src/controller/core/: PluginProcessor.cpp  PluginProcessor.h
src/core/: PluginProcessor.cpp  PluginProcessor.h
src/debug/: README_LOGGING.md  ValueTreeLogger.h
src/model/: Chord.cpp  Chord.h  ChordSequence.h  DiatonyTypes.h  Identifiers.h  ModelIdentifiers.h  Modulation.cpp  Modulation.h  NoteConverter.h  Piece.cpp  Piece.h  PieceElement.h  Progression.cpp  Progression.h  Section.cpp  Section.h
src/model/deprecated/: ChordSequence.h  DiatonyModel.h  Progression.h
src/services/: GenerationService.cpp  GenerationService.h
src/tests/: AppControllerTest.cpp  ChordTest.cpp  GenerationServiceTest.cpp  ModulationTest.cpp  PieceTest.cpp  ProgressionTest.cpp  SectionTest.cpp  TestRunner.cpp
src/ui/: DiatonyText.h  MainContentComponent.cpp  MainContentComponent.h  PluginEditor.cpp  PluginEditor.h  RootAnimator.cpp  RootAnimator.h  UIStateIdentifiers.h
src/ui/animation/: AnimationManager.cpp  AnimationManager.h  SlidingPanelAnimator.cpp  SlidingPanelAnimator.h
src/ui/components/: DiatonyContentPanel.h  GenerationPanel.h  HeaderPanel.h  InteractiveKeyboard.h  SidebarPanel.h  ToastComponent.h  TonalityPanel.h
src/ui/components/extra/: OutlineTextButton.h
src/ui/components/keyboard/layouts/: QwertyLayout.h
src/ui/components/zones/: BaseZone.h  GenerationZone.h  ModeZone.h  ProgressionZone.h  TonalityZone.h
src/ui/controller/: RootUIController.cpp  RootUIController.h
src/ui/extra/: ButtonColoredPanel.h  ClickableColoredPanel.h  ColoredPanel.h  OutlineTextButton.h  SimpleToastComponent.h  StyledButton.h  TextPill.h
src/ui/extra/Button/: ButtonColoredPanel.cpp  ButtonColoredPanel.h  CircularButton.cpp  CircularButton.h  IconStyledButton.cpp  IconStyledButton.h  OutlineTextButton.cpp  OutlineTextButton.h  SelectableStyledButton.cpp  SelectableStyledButton.h  StyledButton.cpp  StyledButton.h
src/ui/extra/Component/: DiatonyAlertWindow.cpp  DiatonyAlertWindow.h  SimpleToastComponent.cpp  SimpleToastComponent.h  TextPill.cpp  TextPill.h  ToastComponent.cpp  ToastComponent.h
src/ui/extra/Component/ComboBox/: DiatonyComboBox.cpp  DiatonyComboBox.h  DiatonyComboBoxLookAndFeel.cpp  DiatonyComboBoxLookAndFeel.h
src/ui/extra/Component/Panel/: ClickableColoredPanel.cpp  ClickableColoredPanel.h  ColoredPanel.cpp  ColoredPanel.h  InfoColoredPanel.cpp  InfoColoredPanel.h
src/ui/extra/Component/Zone/: BaseZone.h
src/ui/footer/: FooterPanel.cpp  FooterPanel.h
src/ui/footer/animator/: FooterAnimator.cpp  FooterAnimator.h
src/ui/footer/components/: ActionsArea.h  ActionsContentArea.h  InteractivePiano.h  InteractivePianoContentArea.h  MidiPianoArea.cpp  MidiPianoArea.h  MidiPianoContentArea.cpp  MidiPianoContentArea.h
src/ui/footer/components/InteractivePiano/: InteractivePiano.cpp  InteractivePiano.h  InteractivePianoContentArea.cpp  InteractivePianoContentArea.h  PianoKey.cpp  PianoKey.h
src/ui/header/: HeaderPanel.cpp  HeaderPanel.h  MidiDragZone.cpp  MidiDragZone.h
src/ui/history/: HistoryPanel.cpp  HistoryPanel.h
src/ui/panels/: BottomPanel.h  MiddlePanel.h  TopPanel.h
src/ui/section/: SectionPanel.cpp  SectionPanel.h
src/ui/section/components/: ContentAreaPanel.h  GenerationButtons.h  OverviewActionArea.h  OverviewArea.h  OverviewContentArea.h  PlaybackActionArea.h  ProgressionArea.h  ScrollableContentPanel.h  WelcomeView.h
src/ui/section/components/EditZone/: ModulationEditor.cpp  ModulationEditor.h  ProgressionArea.cpp  ProgressionArea.h  SectionEditor.cpp  SectionEditor.h  WelcomeView.cpp  WelcomeView.h
src/ui/section/components/EditZone/ModulationParameters/: ChordChip.cpp  ChordChip.h  ModulationTypeZone.cpp  ModulationTypeZone.h  SectionChordsZone.cpp  SectionChordsZone.h
src/ui/section/components/EditZone/Parameters/: KeySelectorComponent.cpp  KeySelectorComponent.h  KeyZone.cpp  KeyZone.h  ModeZone.cpp  ModeZone.h  Zone1.cpp  Zone1.h  Zone2.cpp  Zone2.h  Zone3.cpp  Zone3.h  Zone4.cpp  Zone4.h
src/ui/section/components/OverviewZone/GenerateAndMore/: GenerationButtons.cpp  GenerationButtons.h
src/ui/section/components/OverviewZone/Overview/: OverviewActionArea.cpp  OverviewActionArea.h  OverviewArea.cpp  OverviewArea.h  OverviewContentArea.cpp  OverviewContentArea.h  ScrollableContentPanel.cpp  (+1 more)
src/ui/section/components/Parameters/: Zone1.cpp  Zone1.h  Zone2.cpp  Zone2.h  Zone3.cpp  Zone3.h  Zone4.cpp  Zone4.h
src/ui_archive/LookAndFeel/: DiatonyLookAndFeel.h
src/ui_archive/components/: DiatonyAlertWindow.h  HarmonizerContentPanel.h  HeaderPanel.h  ProgressionPanel.h  SidebarPanel.h  StatusPanel.h
src/ui_archive/components/keyboard/: InteractiveKeyboard.h  KeyboardLayout.h
src/ui_archive/components/keyboard/layouts/: AzertyLayout.h
src/ui_archive/components/zones/: GenerationZone.h  ProgressionZone.h  TonalityZone.h
src/ui_reusable/: README.md
src/ui_reusable/dialogs/: SimpleToastComponent.h
src/utils/: ColorGenerator.cpp  ColorGenerator.h  DatabaseManagement.h  DiatonyConstants.h  FileUtils.h  FontManager.cpp  FontManager.h  Midiprocessor.h
(+6 files in other folders)
